[Test] Java 1.9 patch
Signed-off-by: Ivan Ip <m@lifeho.me>